--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,24 @@ services:
     volumes:
       - .:/app
     restart: unless-stopped
+
+  localstack:
+    image: localstack/localstack:1.3.0
+    ports:
+      - '4566:4566'
+      - '4575:4575'
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      # Make sure that all the services that you use in init-aws.sh script are present here. Otherwise, the container could not start well.
+      - SERVICES=secretsmanager,dynamodb,ssm,cf:cloudformation
+      - AWS_DEFAULT_REGION=us-west-2
+    volumes:
+      - ./infrastructure/src/main/resources/scripts/localstack:/etc/localstack/init/ready.d
+      - ./infrastructure/src/main/resources/cloudformation/core-dynamo-table.yml:/opt/code/localstack/core-dynamo-table.yml
+      - /var/run/docker.sock:/var/run/docker.sock
+    healthcheck:
+      test: "curl --silent --fail localstack:4566/_localstack/health || exit 1"
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 10s
