--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,9 @@ services:
       - SERVICES=secretsmanager,dynamodb,ssm,cf:cloudformation
       - AWS_DEFAULT_REGION=us-west-2
     volumes:
-      - ./dev/localstack/cloudformation/core-dynamo-table.yml:/etc/localstack/init/ready.d
-      - ./api/infrastructure/src/main/resources/cloudformation/core-dynamo-table.yml:/opt/code/localstack/core-dynamo-table.yml
+      - ./dev/localstack/cloudformation/core-dynamo-table.yml:/opt/code/localstack/core-dynamo-table.yml
+      # Ensure that all script files within `dev/docker/scripts/` have executable permissions. If a script does not have the necessary permissions, you can set them using the following command: chmod +x dev/docker/scripts/init.sh
+      - ./dev/docker/scripts:/etc/localstack/init/ready.d
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
       test: "curl --silent --fail localstack:4566/_localstack/health || exit 1"
