--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - '4575:4575'
     environment:
       - DOCKER_HOST=unix:///var/run/docker.sock
-      # Make sure that all the services that you use in init-aws.sh script are present here. Otherwise, the container could not start well.
+      # Make sure that all the services that you use in init-config.sh script are present here. Otherwise, the container could not start well.
       - SERVICES=secretsmanager,dynamodb,ssm,cf:cloudformation
       - AWS_DEFAULT_REGION=us-west-2
     volumes:
