--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,17 @@ services:
     environment:
       - DOCKER_HOST=unix:///var/run/docker.sock
       # Make sure that all the services that you use in init-config.sh script are present here. Otherwise, the container could not start well.
-      - SERVICES=secretsmanager,dynamodb,ssm,cf:cloudformation
+      - SERVICES=sqs,dynamodb,ssm,cf:cloudformation
       - AWS_DEFAULT_REGION=us-west-2
     volumes:
       - ./dev/localstack/cloudformation/core-dynamo-table.yml:/opt/code/localstack/core-dynamo-table.yml
+      - ./dev/localstack/cloudformation/sqs-queue.yml:/opt/code/localstack/sqs-queue.yml
       # Ensure that all script files within `dev/docker/scripts/` have executable permissions. If a script does not have the necessary permissions, you can set them using the following command: chmod +x dev/docker/scripts/init.sh
       - ./dev/docker/scripts:/etc/localstack/init/ready.d
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
       test: "curl --silent --fail localstack:4566/_localstack/health || exit 1"
       interval: 10s
-      retries: 5
+      retries: 5  
       start_period: 10s
       timeout: 10s
