--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 vendor
 coverage.html
+*.json
 *.html
 .idea
 # If you prefer the allow list template instead of the deny list, see community template:
