Refactor/improving revive configuration (#10)
* using revive linter with rules

* wip

* fixing dev init.sh

* migrating go version to 1.24

* retrieve team usecase

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - "8080:8080"
     environment:
       - GIN_MODE=release
+      - DYNAMODB_URL=http://localstack:4566
+      - AWS_REGION=us-west-2
     volumes:
-      - .:/application
+      - .:/app
     restart: unless-stopped
 
   localstack:
